--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-listado></app-listado>
+  <app-main-page></app-main-page>
 </body>
 </html>
